@@ -5,6 +5,7 @@
 Release notes go here.
 Checklist: Are all the new features documented in both the website and rdoc?
 
+* Added support for Heckle
 * Applied [#7282] dump results even if spec is interruptted (patch from Kouhei Sutou)
 * Applied [#7277] model.should_have(n).errors_on(:attribute) (patch from Wilson Bilkovich)
 * Applied [#7270] RSpec render_partial colliding with simply_helpful (patch from David Goodlad)
